cmake_minimum_required(VERSION 3.28)
project(TeaPacket_Tests)

function(tp_run_test module)
    file(GLOB impls LIST_DIRECTORIES true "${TEAPACKET_ROOT}/Modules/${module}/*")
    foreach (impl ${impls})
        get_filename_component(implName ${impl} NAME)
        if(NOT "${implName}" STREQUAL "Interface")
            set(TP_TEST_IMPL ${implName})
            add_subdirectory(${module})
        endif ()
    endforeach ()
endfunction()

tp_run_test(Graphics)